@@ -23,14 +23,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @RestController
 @RequestMapping("/posts")
 public class PostManagementController {
+
     @Autowired
     private PostManagementRepository postRepository;
 
@@ -43,69 +41,77 @@ public class PostManagementController {
     @Value("${media.upload.dir}")
     private String uploadDir;
 
+    // Helper method to get or create the upload directory
+    private File getUploadDirectory() {
+        File uploadDirectory = new File(System.getProperty("user.dir"), uploadDir);
+        if (!uploadDirectory.exists()) {
+            uploadDirectory.mkdirs();
+        }
+        return uploadDirectory;
+    }
+
+    // Helper method to store uploaded file and return the stored URL
+    private String storeFile(MultipartFile file) throws IOException {
+        String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
+        String uniqueFileName = System.currentTimeMillis() + "_" + UUID.randomUUID() + "." + extension;
+        Path filePath = getUploadDirectory().toPath().resolve(uniqueFileName);
+        file.transferTo(filePath.toFile());
+        return "/media/" + uniqueFileName;
+    }
+
+    // Create a new post
     @PostMapping
     public ResponseEntity<?> createPost(
             @RequestParam String userID,
             @RequestParam String title,
             @RequestParam String description,
-            @RequestParam String category, // New parameter for category
+            @RequestParam String category,
             @RequestParam List<MultipartFile> mediaFiles) {
 
+        // Validate number of media files
         if (mediaFiles.size() < 1 || mediaFiles.size() > 3) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("You must upload between 1 and 3 media files.");
         }
 
-        // Resolve the upload directory as an absolute path
-        final File uploadDirectory = new File(uploadDir.isBlank() ? uploadDir : System.getProperty("user.dir"), uploadDir);
-
-        // Ensure the upload directory exists
-        if (!uploadDirectory.exists()) {
-            boolean created = uploadDirectory.mkdirs();
-            if (!created) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to create upload directory.");
+        // Save uploaded media
+        List<String> mediaUrls = new ArrayList<>();
+        for (MultipartFile file : mediaFiles) {
+            if (file.getContentType() != null && file.getContentType().matches("image/(jpeg|png|jpg)|video/mp4")) {
+                try {
+                    mediaUrls.add(storeFile(file));
+                } catch (IOException e) {
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to store media file.");
+                }
             }
         }
 
-        List<String> mediaUrls = mediaFiles.stream()
-                .filter(file -> file.getContentType().matches("image/(jpeg|png|jpg)|video/mp4"))
-                .map(file -> {
-                    try {
-                        // Generate a unique filename
-                        String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
-                        String uniqueFileName = System.currentTimeMillis() + "_" + UUID.randomUUID() + "." + extension;
-
-                        Path filePath = uploadDirectory.toPath().resolve(uniqueFileName);
-                        file.transferTo(filePath.toFile());
-                        return "/media/" + uniqueFileName; // URL to access the file
-                    } catch (IOException e) {
-                        throw new RuntimeException("Failed to store file " + file.getOriginalFilename(), e);
-                    }
-                })
-                .collect(Collectors.toList());
-
+        // Create and save the new post
         PostManagementModel post = new PostManagementModel();
         post.setUserID(userID);
         post.setTitle(title);
         post.setDescription(description);
-        post.setCategory(category); // Set category
+        post.setCategory(category);
         post.setMedia(mediaUrls);
 
         PostManagementModel savedPost = postRepository.save(post);
         return ResponseEntity.status(HttpStatus.CREATED).body(savedPost);
     }
 
+    // Get all posts
     @GetMapping
     public List<PostManagementModel> getAllPosts() {
         return postRepository.findAll();
     }
 
+    // Get posts by a specific user
     @GetMapping("/user/{userID}")
     public List<PostManagementModel> getPostsByUser(@PathVariable String userID) {
         return postRepository.findAll().stream()
                 .filter(post -> post.getUserID().equals(userID))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // Get a post by its ID
     @GetMapping("/{postId}")
     public ResponseEntity<?> getPostById(@PathVariable String postId) {
         PostManagementModel post = postRepository.findById(postId)
@@ -113,6 +119,7 @@ public class PostManagementController {
         return ResponseEntity.ok(post);
     }
 
+    // Delete a post by its ID (and delete associated media files)
     @DeleteMapping("/{postId}")
     public ResponseEntity<?> deletePost(@PathVariable String postId) {
         PostManagementModel post = postRepository.findById(postId)
@@ -121,26 +128,24 @@ public class PostManagementController {
         // Delete associated media files
         for (String mediaUrl : post.getMedia()) {
             try {
-                // Resolve the full file path
-                Path filePath = Paths.get(uploadDir, mediaUrl.replace("/media/", ""));
+                Path filePath = Paths.get(getUploadDirectory().getAbsolutePath(), mediaUrl.replace("/media/", ""));
                 Files.deleteIfExists(filePath);
             } catch (IOException e) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body("Failed to delete media file: " + mediaUrl);
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to delete media: " + mediaUrl);
             }
         }
 
-        // Delete the post from the database
-        postRepository.deleteById(postId);
+        postRepository.delete(post);
         return ResponseEntity.ok("Post deleted successfully!");
     }
 
+    // Update a post (with optional new media)
     @PutMapping("/{postId}")
     public ResponseEntity<?> updatePost(
             @PathVariable String postId,
             @RequestParam String title,
             @RequestParam String description,
-            @RequestParam String category, // Include category parameter
+            @RequestParam String category,
             @RequestParam(required = false) List<MultipartFile> newMediaFiles) {
 
         PostManagementModel post = postRepository.findById(postId)
@@ -148,38 +153,24 @@ public class PostManagementController {
 
         post.setTitle(title);
         post.setDescription(description);
-        post.setCategory(category); // Update category
+        post.setCategory(category);
 
+        // Add new media if uploaded
         if (newMediaFiles != null && !newMediaFiles.isEmpty()) {
-            // Ensure the upload directory exists
-            final File uploadDirectory = new File(uploadDir.isBlank() ? uploadDir : System.getProperty("user.dir"), uploadDir);
-            if (!uploadDirectory.exists()) {
-                boolean created = uploadDirectory.mkdirs();
-                if (!created) {
-                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to create upload directory.");
+            for (MultipartFile file : newMediaFiles) {
+                try {
+                    post.getMedia().add(storeFile(file));
+                } catch (IOException e) {
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to store media file.");
                 }
             }
-
-            List<String> newMediaUrls = newMediaFiles.stream()
-                    .map(file -> {
-                        try {
-                            String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
-                            String uniqueFileName = System.currentTimeMillis() + "_" + UUID.randomUUID() + "." + extension;
-                            Path filePath = uploadDirectory.toPath().resolve(uniqueFileName);
-                            file.transferTo(filePath.toFile());
-                            return "/media/" + uniqueFileName;
-                        } catch (IOException e) {
-                            throw new RuntimeException("Failed to store file " + file.getOriginalFilename(), e);
-                        }
-                    })
-                    .collect(Collectors.toList());
-            post.getMedia().addAll(newMediaUrls);
         }
 
         postRepository.save(post);
         return ResponseEntity.ok("Post updated successfully!");
     }
 
+    // Delete a specific media file from a post
     @DeleteMapping("/{postId}/media")
     public ResponseEntity<?> deleteMedia(@PathVariable String postId, @RequestBody Map<String, String> request) {
         String mediaUrl = request.get("mediaUrl");
@@ -187,44 +178,49 @@ public class PostManagementController {
         PostManagementModel post = postRepository.findById(postId)
                 .orElseThrow(() -> new ResourceNotFoundException("Post not found: " + postId));
 
+        // Remove the media from the post
         if (!post.getMedia().remove(mediaUrl)) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Media file not found in post.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Media file not found.");
         }
 
+        // Delete the file from the server
         try {
-            Path filePath = Paths.get(uploadDir, mediaUrl.replace("/media/", ""));
+            Path filePath = Paths.get(getUploadDirectory().getAbsolutePath(), mediaUrl.replace("/media/", ""));
             Files.deleteIfExists(filePath);
         } catch (IOException e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to delete media file.");
         }
 
         postRepository.save(post);
-        return ResponseEntity.ok("Media file deleted successfully!");
+        return ResponseEntity.ok("Media deleted successfully!");
     }
 
+    // Like or unlike a post
     @PutMapping("/{postId}/like")
     public ResponseEntity<PostManagementModel> likePost(@PathVariable String postId, @RequestParam String userID) {
         return postRepository.findById(postId)
                 .map(post -> {
+                    // Toggle like status
                     post.getLikes().put(userID, !post.getLikes().getOrDefault(userID, false));
                     postRepository.save(post);
 
-                    // Create a notification for the post owner
+                    // Send notification if someone else liked the post
                     if (!userID.equals(post.getUserID())) {
                         String userFullName = userRepository.findById(userID)
                                 .map(user -> user.getFullname())
                                 .orElse("Someone");
-                        String message = String.format("%s liked your %s post", userFullName, post.getTitle());
-                        String currentDateTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, currentDateTime);
+                        String message = String.format("%s liked your post: %s", userFullName, post.getTitle());
+                        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, timestamp);
                         notificationRepository.save(notification);
                     }
 
                     return ResponseEntity.ok(post);
                 })
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).build());
+                .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
+    // Add a comment to a post
     @PostMapping("/{postId}/comment")
     public ResponseEntity<PostManagementModel> addComment(@PathVariable String postId, @RequestBody Map<String, String> request) {
         String userID = request.get("userID");
@@ -237,7 +233,6 @@ public class PostManagementController {
                     comment.setUserID(userID);
                     comment.setContent(content);
 
-                    // Fetch user's full name
                     String userFullName = userRepository.findById(userID)
                             .map(user -> user.getFullname())
                             .orElse("Anonymous");
@@ -246,11 +241,11 @@ public class PostManagementController {
                     post.getComments().add(comment);
                     postRepository.save(post);
 
-                    // Create a notification for the post owner
+                    // Send notification if someone else commented
                     if (!userID.equals(post.getUserID())) {
                         String message = String.format("%s commented on your post: %s", userFullName, post.getTitle());
-                        String currentDateTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, currentDateTime);
+                        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, timestamp);
                         notificationRepository.save(notification);
                     }
 
@@ -259,11 +254,13 @@ public class PostManagementController {
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
+    // Update a comment
     @PutMapping("/{postId}/comment/{commentId}")
     public ResponseEntity<PostManagementModel> updateComment(
             @PathVariable String postId,
             @PathVariable String commentId,
             @RequestBody Map<String, String> request) {
+
         String userID = request.get("userID");
         String content = request.get("content");
 
@@ -279,11 +276,13 @@ public class PostManagementController {
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
+    // Delete a comment
     @DeleteMapping("/{postId}/comment/{commentId}")
     public ResponseEntity<PostManagementModel> deleteComment(
             @PathVariable String postId,
             @PathVariable String commentId,
             @RequestParam String userID) {
+
         return postRepository.findById(postId)
                 .map(post -> {
                     post.getComments().removeIf(comment ->
@@ -295,8 +294,9 @@ public class PostManagementController {
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
+    // Handle error when file exceeds max upload size
     @ExceptionHandler(MaxUploadSizeExceededException.class)
-    public ResponseEntity<?> handleMaxSizeException(MaxUploadSizeExceededException exc) {
-        return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE).body("File size exceeds the maximum limit!");
+    public ResponseEntity<?> handleMaxSizeException(MaxUploadSizeExceededException ex) {
+        return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE).body("File size exceeds maximum limit!");
     }
 }
